532: Check subarray sums

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,1 +1,9 @@
-{}
+{
+  "workbench.colorCustomizations": {
+    "editor.lineHighlightBackground": "#1073cf2d",
+    "editor.lineHighlightBorder": "#9fced11f",
+    "activityBar.background": "#103425",
+    "titleBar.activeBackground": "#164834",
+    "titleBar.activeForeground": "#F5FCF9"
+  }
+}
