--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,4 @@
 {
-  "workbench.colorCustomizations": {
-    "editor.lineHighlightBackground": "#1073cf2d",
-    "editor.lineHighlightBorder": "#9fced11f",
-    "activityBar.background": "#103425",
-    "titleBar.activeBackground": "#164834",
-    "titleBar.activeForeground": "#F5FCF9"
-  }
+  "workbench.colorTheme": "GitHub Light Colorblind (Beta)",
+  "workbench.activityBar.visible": true
 }
