--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-  "workbench.colorTheme": "GitHub Light Colorblind (Beta)",
+  "workbench.colorTheme": "GitHub Dark Colorblind (Beta)",
   "workbench.activityBar.visible": true,
   "workbench.colorCustomizations": {
     "editor.lineHighlightBackground": "#1073cf2d",
